--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(forehead_extractor src/main.cpp)
-target_link_libraries(forehead_extractor ${OpenCV_LIBS})
+add_executable(Forehead_extractor main.cpp)
+target_link_libraries(Forehead_extractor ${OpenCV_LIBS})
